General bug fixes as well as a quality of life change to make Rain more visible on the cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,12 +61,14 @@ input{
 .forecast-cards {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-content: center;
     justify-content: center;  
 }
 .card, .m-card {
     margin: 20px;
-    padding: 20px;
-    background-color: var(--lightBlue);
+    padding: 30px;
+    border-style: solid;
+    border-color: var(--asideBlue);
+    border-radius: 5px;
 }
